--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
         </div>
     </div>
 
+    <!-- Modal de confirmación para eliminar -->
+    <div id="confirm-modal" class="confirm-modal">
+        <div class="confirm-content">
+            <div class="confirm-message" id="confirm-message">
+                ¿Estás seguro de que quieres eliminar esta tarjeta?
+            </div>
+            <div class="confirm-actions">
+                <button class="btn-cancel-confirm" id="confirm-cancel">Cancelar</button>
+                <button class="btn-delete-confirm" id="confirm-delete">Eliminar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
