--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- Las tarjetas se generarán aquí dinámicamente -->
             </div>
             <button class="add-card-btn" onclick="openCardModal('todo')">
-                + Agregar tarjeta
+                + Agregar tarea
             </button>
         </section>
 
@@ -39,7 +39,7 @@
                 <!-- Las tarjetas se generarán aquí dinámicamente -->
             </div>
             <button class="add-card-btn" onclick="openCardModal('progress')">
-                + Agregar tarjeta
+                + Agregar tarea
             </button>
         </section>
 
@@ -50,7 +50,7 @@
                 <!-- Las tarjetas se generarán aquí dinámicamente -->
             </div>
             <button class="add-card-btn" onclick="openCardModal('done')">
-                + Agregar tarjeta
+                + Agregar tarea
             </button>
         </section>
     </main>
@@ -58,7 +58,7 @@
     <!-- Modal para crear/editar tarjetas -->
     <div id="card-modal" class="modal">
         <div class="modal-content">
-            <h3 id="modal-title">Nueva Tarjeta</h3>
+            <h3 id="modal-title">Nueva Tarea</h3>
             
             <form id="card-form">
                 <div class="form-group">
@@ -83,7 +83,7 @@
     <div id="confirm-modal" class="confirm-modal">
         <div class="confirm-content">
             <div class="confirm-message" id="confirm-message">
-                ¿Estás seguro de que quieres eliminar esta tarjeta?
+                ¿Estás seguro de que quieres eliminar esta tarea?
             </div>
             <div class="confirm-actions">
                 <button class="btn-cancel-confirm" id="confirm-cancel">Cancelar</button>
