--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanbaner - Tu tablero de tareas simple</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Kanbaner - Organiza tus tareas con un tablero Kanban simple y fácil de usar. Gestión visual con arrastrar y soltar, temas oscuro/claro y guardado automático local.">
+    <meta name="keywords" content="kanban, tareas, organización, productividad, gestión de tareas, tablero, to-do list">
+    <meta name="author" content="Mike-0-code">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Kanbaner - Tablero de Tareas Simple">
+    <meta property="og:description" content="Organiza tus tareas con un tablero Kanban simple y fácil de usar">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mike-0-code.github.io/Kanbaner/">
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="dark-theme">
     <!-- Barra superior -->
