--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <!-- Barra superior -->
     <header class="top-bar">
         <h1 class="app-name">Kanbaner</h1>
+        <div class="header-actions">
+        <button class="info-btn" aria-label="Información de almacenamiento" title="Información de almacenamiento">
+            ⓘ
+        </button>
         <div class="theme-switch">
             <label class="switch">
                 <input type="checkbox" id="theme-toggle">
